Wed May  1 02:37:17 1996  Mark Eichin  <eichin@cygnus.com>

	* kinit.c (main): add -s starttime option. Have it accept a delta
	time (if the value doesn't parse as a valid timestamp.) Set the
	postdated option as well. get time of day early enough in main so
	the options code can use it. Make the end time relative to the
	start time, if given.
	* kinit.M: document -s option.

Thu Feb 15 12:31:03 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kinit.c (main): Do not free memory until all done using it.

Tue Sep 26 22:19:32 1995  Mark Eichin  <eichin@cygnus.com>

	* kinit.c (KRB5_DEFAULT_LIFE): default life should be 10 hours,
	not eight, for practical/social reasons.

Mon Aug 21 16:49:06 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kinit.c - Use string_to_deltat to parse lifetime arguments so that
		we use common code.  Remove convtime().  Fix gcc -Wall.
	* configure.in - Add -lkadm.
	* kinit.M - Remove restriction on lifetimes.


Fri Jul 7 15:53:29 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit library handling.
	* configure.in - Add KRB5_LIBRARIES.


Thu Jun 15 17:45:47 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Fri Jun  9 18:37:27 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri Apr 28 15:49:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (kinit): Use $(LD) instead of $(CC) when trying to
	        link.  (So purify works).  Note: to get things to work on
		the mac, just put LD=$(CC) in the Makefile.

Fri Apr 21 15:24:57 1995  Chris Provenzano (proven@mit.edu)

	* configure.in : Make configure look for pwd.h and define
		HAVE_PWD_H if found.

Tue Mar 28 17:55:37 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Remove, conflicts with pre.in.